lcb: Fixed output parameter for indirect calls